=== HEAD
 
* Remove Dataset#to_table_reference protected method, no longer used (jeremyevans)

* Fix thread-safety issue in stored procedure code (jeremyevans)

* Remove SavepointTransactions module, integrate into Database code (jeremyevans)

* Add supports_distinct_on? method (jeremyevans)

* Remove SQLStandardDateFormat, replace with requires_sql_standard_datetimes? method (jeremyevans)

* Remove UnsupportedIsTrue module, replace with supports_is_true? method (jeremyevans)

* Remove UnsupportedIntersectExcept(All)? modules, replace with methods (jeremyevans)

* Make Database#indexes work on PostgreSQL versions prior to 8.3 (tested on 7.4) (jeremyevans)

* Fix bin/sequel using a YAML file on 1.9 (jeremyevans)

* Allow connection pool options to be specified in connection string (jeremyevans)

* Handle :user and :password options in the JDBC adapter (jeremyevans)

* Fix warnings when using the ODBC adapter (jeremyevans)

* Add opening_databases.rdoc file for describing how to connect to a database (mwlang, jeremyevans)

* Significantly increase JDBC select performance (jeremyevans)

* Slightly increase SQLite select performance using the native adapter (jeremyevans)

* Majorly increase MySQL select performance using the native adapter (jeremyevans)

* Pass through unsigned/elements/size and other options when altering columns on MySQL (tmm1)

* Allow on_duplicate_key_update to affect Dataset#insert on MySQL (tmm1)

* Support using a given table and column to store schema versions, using new Migrator.run method (bougyman, jeremyevans)

* Fix foreign key table constraints on MySQL (jeremyevans)

* Remove Dataset#table_exists?, use Database#table_exists? instead (jeremyevans)

* Fix graphing of datasets with dataset sources (jeremyevans) (#271)

* Raise a Sequel::Error if Sequel.connect is called with something other than a Hash or String (jeremyevans) (#272)

* Add -N option to bin/sequel to not test the database connection (jeremyevans)
